# libhbc

./: CMakeLists.txt  README.md
include/: hbc_errors.h  hbc_types.h
src/: .placeholder.cpp
